# cvo-devops-challenge

./: README-fr.md  README.md  main.py  pyproject.toml  s3_lister.py
tools/: test_data.py
