[tool.poetry]
name = "devops-challenge-base"
version = "0.1.0"
description = ""
authors = ["Denis Blanchette <dblanchette@coveo.com>"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.0"
boto3-stubs = { extras = ["s3"], version = "^1.34.0" }
typer = "^0.12.0"
pytz = "^2024.0"
tabulate = "^0.9.0"
typing-extensions = "^4.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
